test fix v1 invisible error div

--- a/src/styles/components/_auth.scss
+++ b/src/styles/components/_auth.scss
@@ -52,7 +52,6 @@
 
 .auth__alert-error {
   background-color: rgb(194, 61, 61);
-  opacity: 90%;
   border-radius: 5px;
   color: white;
   display: flex;
